--- a/public/configure.html
+++ b/public/configure.html
@@ -15,7 +15,7 @@
 <body>
     
     
-     <img class="image" width="100%" height="585px" src="intro2.gif">
+     <img class="image" width="100%" height="100%" src="intro2.gif">
     <div class="container">
     <header class="header">
 		<h1 class="logo"> <img width="45px" src="Automation.png"></h1>
