--- a/public/signup.html
+++ b/public/signup.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img class="image" width="100%" height="585px" src="intro2.gif">
+    <img class="image" width="100%" height="100%" src="intro2.gif">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
