--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp Form - MongoDB</title>
+    <title>🔓 Login</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
 </head>
 
 <body>
@@ -20,7 +21,8 @@
             </div>
             <div class="col-md-6 main">
                 <form action="/login" method="POST">
-                    <h1 style="padding-left: 0px">Login</h1>
+                    
+                    <h1 style="padding-left: 0px"><img style="width: 10%; height: 10%" src="/images/user2.png"> Login</h1>
                     <h4><b>Username</b></h4>
                     <input style="color: black"  type="text" class="box" id="email" name="username" placeholder="Username" autocomplete="off" />
                     <br>
@@ -31,8 +33,8 @@
                     <input style="color: black"  type="password" class="box" id="password" name="password" placeholder="Password" autocomplete="off" />
                     <br>
                     
-                    <input style="color: black"  type="submit" value="Login" id="submit" />
-                    <h2>Doesn't have an account?<a href='/sign_up'>Sign Up</a></h2>
+                    <input class="first btn"  type="submit" value="Login" id="submit" />
+                    <h2>Doesn't have an account?<a href='/sign_up' style="color: aqua;">Sign Up</a></h2>
                 </form>
             </div>
             <div class="col-md-3">
