--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp Form - MongoDB</title>
+    <title>🔐 SignUp</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
 </head>
 
 <body>
-    <img class="image" width="100%" height="100%" src="intro2.gif">
+    <img class="image" width="100%" height="100%" src="/images/intro2.gif">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -30,7 +31,7 @@
                     <h4><b>Password</b></h4>
                     <input style="color: black"  type="password" class="box" id="password" name="password" placeholder="Password" autocomplete="off" />
                     <br>          
-                    <input style="color: black"  type="submit" value="Sign Up" id="submit" />
+                    <input style="color: black" class="btn5" type="submit" value="Sign Up" id="submit" />
                     <h2>Already have an account?<a href='/login'>Login</a></h2>
                 </form>
             </div>
