--- a/public/pages/signupsuccess.html
+++ b/public/pages/signupsuccess.html
@@ -5,7 +5,8 @@
     <title> Signup Form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             <div class="col-md-6 main">
 
                 <h1> Signup Successful</h1>
-                <a href="login.html" ><button style="margin-left: 0px; font-weight: bold" class="btn third">GO TO LOGIN PAGE-></button></a>
+                <a href="/pages/login.html" ><button style="margin-left: 0px; font-weight: bold" class="btn third">GO TO LOGIN PAGE-></button></a>
 
             </div>
 
